--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -51,6 +52,9 @@ dependencies {
 
     //transform :
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
-    // If you want to use the GPU Filters
-    implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
+
+    // Room :
+    implementation 'androidx.room:room-runtime:2.4.2'
+    kapt 'androidx.room:room-compiler:2.4.2'
+
 }
